# auth_api

./: .env.example  Cargo.toml  Dockerfile  README.md  openapi.json  package-lock.json
.github/workflows/: deploy.yaml
auth_api_frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
auth_api_frontend/public/: index.html  manifest.json
auth_api_frontend/public/ts-client/: common.ts  index.ts
auth_api_frontend/public/ts-client/docs/: AuthApi.md  User.md
auth_api_frontend/src/: App.tsx  AuthContext.tsx  index.css  index.tsx
auth_api_frontend/src/pages/: Login.tsx  Profile.tsx  Register.tsx
auth_api_frontend/src/styles/: Auth.css
auth_api_frontend/src/ts-client/: api.ts  base.ts  client.ts  package-lock.json  package.json  tsconfig.json
auth_api_frontend/src/ts-client/.openapi-generator/: FILES
auth_api_frontend/src/ts-client/docs/: AuthApi.md  RegisterRequest.md
k8s/: backend.yaml  config.yaml  doc.md  frontend.yaml  ingress.yaml  postgres.yaml
src/: main.rs  utils.rs
src/middleware/: auth.rs
src/migrations/: 001_init.sql
src/models/: mod.rs  user.rs
src/routes/: auth.rs  mod.rs  protected.rs
src/ts-client/: api.ts  configuration.ts
src/ts-client/.openapi-generator/: FILES
src/ts-client/docs/: ProtectedApi.md  Role.md
ts-client/: api.ts
ts-client/.openapi-generator/: FILES
ts-client/docs/: AuthApi.md  ProtectedApi.md  User.md
