[package]
edition = "2021"
name = "auth-api"
version = "0.1.0"

[dependencies]
axum = "0.8.4"
bcrypt = "0.15"
chrono = "0.4"
dotenv = "0.15.0"
dotenvy = "0.15"
jsonwebtoken = "9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
tower-http = {version = "0.6.6", features = ["cors"]}
utoipa = {version = "5.4", features = ["axum_extras"]}
utoipa-swagger-ui = {version = "9.0.2", features = ["axum"]}

sqlx = {version = "0.7", features = ["runtime-tokio", "postgres", "macros"]}
regex = "1.11.1"
